[package]
name = "gframe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(target_os = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "25.0.2", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", feature = [
  "Document",
  "Window",
  "Element",
]}
